12-05-net2-k8s/deploy_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  namespace: 12-05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiko
  template:
    metadata:
      labels:
        app: taiko
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 8080
            name: http-multitool
---
apiVersion: v1
kind: Service
metadata:
  name: netology-svc
  namespace: 12-05
spec:
  selector:
    app: taiko
  ports:
  - name: nginx-http
    protocol: TCP
    port: 9001
    targetPort: http-nginx
  - name: multitool-http
    protocol: TCP
    port: 9002
    targetPort: http-multitool
