12-05-net2-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taiko-ingress
  namespace: 12-05
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: netology-svc
              port:
                number: 9001
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: netology-svc
              port:
                number: 9002
